<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/txt_title"
        android:padding="15dp"
        android:gravity="center"
        android:textColor="@color/default_white"
        android:textSize="25sp"
        android:text="@string/dialog_delete_data_title"
        android:background="@color/default_red"
        style="@style/DefaultTextStyle"
        />

    <TextView
        android:id="@+id/txt_message"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/dialog_delete_data_message"
        style="@style/DefaultTextStyle"
        />

    <!-- container buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:weightSum="1.0"
        >

        <TextView
            android:id="@+id/txt_btn_yes"
            android:layout_width="0dp"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/default_white"
            android:padding="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/bg_senior_button"
            android:layout_weight="0.5"
            style="@style/DefaultTextStyle"
            />

        <TextView
            android:id="@+id/txt_btn_no"
            android:layout_width="0dp"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/default_white"
            android:padding="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/bg_senior_button"
            android:layout_weight="0.5"
            style="@style/DefaultTextStyle"
            />
    </LinearLayout>
    <!-- container buttons -->

</LinearLayout>